Update plantuml version upgrade setting
- plantuml-mode 업그레이드: server확인이 기본모드 변경되었는데, 기존과
같이 jar확인으로 변경

--- a/emacs/init-packages.org
+++ b/emacs/init-packages.org
@@ -776,6 +776,7 @@
 (use-package plantuml-mode
 	:ensure t
 	:init
+	(setq plantuml-default-exec-mode 'jar)
 	(setq plantuml-jar-path "~/.emacs.d/bin/plantuml/plantuml.jar"))
 
 (use-package fill-column-indicator
